[gd_scene load_steps=2 format=3 uid="uid://btfckxwjae5xo"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_d63pf"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d63pf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1163.0
offset_bottom = 659.0
color = Color(0.49, 0.49, 0.49, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 419.0
offset_top = 175.0
offset_right = 654.0
offset_bottom = 470.0
theme_override_constants/separation = 50

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="Main menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = " Main menu "

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Fullscreen" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 457.0
offset_top = 548.0
offset_right = 608.0
offset_bottom = 584.0
theme_override_font_sizes/font_size = 20
text = "Fullscreen"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Main menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="Fullscreen" to="." method="_on_fullscreen_toggled"]
